js/js.translator/testData/incremental/invalidation/inlineFunSameLibRemoveFunctions/lib1/l1.0.kt
inline fun plusOne(x: Int): Int = x + 1
inline fun timesTwo(x: Int): Int = x * 2
